# neon-synth-factory

./: .gitignore  ANDROID_BUILD.md  COMPLIANCE_AUDIT.md  FACTORY_README.md  MISSION_STATEMENT.md  PARAMETER_REORGANIZATION.txt  build-android.ps1  build.ps1  clone-template.ps1  create_fm_files.py  create_musical_patches.py  fix_editor.py  generate_factory_bank.py  reset_factory_bank.py
.github/workflows/: build-all-synths.yml  build-ios.yml  build-neon-777.yml  build-neon-chip.yml  build-neon-fm.yml  build-neon-jr.yml  build-neon-sid.yml  build-neon-split.yml  build-synth.yml
factory-docs/: 01_introduction.md  02_build_system.md  03_development_standards.md  04_how_to_use_neon_template.md  05_android_deployment.md  06_android_audio_permissions.md  README.md  agents.md  neon-jr-patch-guide-llm.md  neon-jr-patch-recipes.md  universal-subtractive-synthesis-guide.md
neon-777/: CMakeLists.txt  README.md
neon-777/build-test/: CMakeCache.txt
neon-777/source/: ModulationTargets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SignalPath.cpp  SignalPath.h
neon-chip/: CMakeLists.txt  README.md
neon-chip/source/: ChipModules.h  ChipOscillator.h  ChipSignalPath.cpp  ChipSignalPath.h  ModulationTargets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
neon-chip/source/modules/: AtariModule.h  ChipModuleBase.h  NesModule.h  SidModule.cpp  SidModule.h
neon-components/: CMakeLists.txt  README.md
neon-components/source/neon_ui_components/: neon_ui_components.cpp  neon_ui_components.h
neon-components/source/neon_ui_components/core/: NeonColors.h  NeonLookAndFeel.cpp  NeonLookAndFeel.h  NeonManagedParameter.h  NeonParameterRegistry.cpp  NeonParameterRegistry.h  NeonParameterTemplate.h  NeonPatchManager.h  NeonRegistry.h
neon-components/source/neon_ui_components/modules/: AdsrModule.h  AmpModule.h  ArpModule.h  ControlModule.h  DahdsrModule.h  FxModule.h  LadderFilterModule.h  LfoModule.h  LibrarianModule.h  ModMatrixModule.h  ModuleBase.cpp  ModuleBase.h  ModuleSelectionPanel.h  NeonSelectionPanel.cpp  NeonSelectionPanel.h  NeonSynthModule.cpp  NeonSynthModule.h  NoiseModule.h  OscillatorModule.h  SubOscModule.h
neon-components/source/neon_ui_components/widgets/: NeonBar.cpp  NeonBar.h  NeonDebugLauncher.h  NeonDebugPanel.h  NeonParameterCard.cpp  NeonParameterCard.h  NeonRibbon.h  NeonToggle.cpp  NeonToggle.h  NeonVowelMap.cpp  NeonVowelMap.h  NeonXYPad.h
neon-components/themes/: classic_neon.toml  deep_sea.toml
neon-fm/: CMakeLists.txt  FM_ALGORITHMS.md
neon-fm/source/: FmAlgorithm.h  FmModules.h  FmOperator.h  FmSignalPath.cpp  FmSignalPath.h  ModulationTargets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
neon-h2o/themes/: h2o_default.toml
neon-h2o/waves-1/: Cluster 3.wav.asd  Cluster 6.wav.asd  Cluster 8.wav.asd  Cobalt 3.wav.asd  Duotone 3.wav.asd  Duotone 5.wav.asd  Flux 2.wav.asd  Flux 5.wav.asd  Neuton 4.wav.asd  Radiance 5.wav.asd  Regent2.wav.asd  SQ_Root 13.wav.asd  Sync_L1.wav.asd  Sync_L2.wav.asd  Sync_L3.wav.asd  Sync_L4.wav.asd
neon-jr/: CMakeLists.txt
neon-jr-retrospective/: 01_overview.md  02_sop_documentation.md
neon-jr/source/: ModulationTargets.h  NeonJrVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SignalPath.cpp  SignalPath.h
neon-jr/waves-1/: Chroma5.wav.asd  Chroma6.wav.asd  Cluster 1.wav.asd  Flux 1.wav.asd  Flux 3.wav.asd  Glint 1.wav.asd  Lumina 4.wav.asd  Lumina 6.wav.asd  Prism 2.wav.asd  Radiance 3.wav.asd  Regent4.wav.asd  SQ_Root 6.wav.asd  SQ_Root 9.wav.asd  Saw.wav.asd  Scorpio 9.wav.asd  Spectral X4.wav.asd  Sync_L5.wav.asd
neon-qwen/: CMakeLists.txt  NeonQwenSynthEditor.cpp  NeonQwenSynthEditor.h  NeonQwenSynthProcessor.cpp  NeonQwenSynthProcessor.h  NeonQwenSynthSound.cpp  NeonQwenSynthSound.h  NeonQwenSynthVoice.cpp  NeonQwenSynthVoice.h
neon-sid/: CMakeLists.txt  README.md
neon-sid/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SidModules.h  SidOscillator.h  SidSignalPath.cpp  SidSignalPath.h
neon-split/: CMakeLists.txt
neon-split/source/: ArpEngine.cpp  ArpEngine.h  ArpPresets.cpp  ArpPresets.h  BassEngine.cpp  BassEngine.h  BassPresets.cpp  BassPresets.h  Chorus.cpp  Chorus.h  DrumEngine.cpp  DrumEngine.h  EffectsChain.cpp  EffectsChain.h  HighPassFilter.cpp  HighPassFilter.h  ModulationTargets.h  PadEngine.cpp  PadEngine.h  PadPresets.cpp  PadPresets.h  PatternEngine.cpp  PatternEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Reverb.cpp  Reverb.h  SplitModules.h  SplitSignalPath.cpp  SplitSignalPath.h  SyncDelay.cpp  SyncDelay.h  VoiceBase.cpp  VoiceBase.h
neon-template/: CMakeLists.txt  README.md
neon-template/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
neon-test/: CMakeLists.txt  Main.cpp
planning docs/: 01_architecture_overview.md  01_neon_split_architecture.md  02_design_system.md  03_component_inventory.md  04_synth_modules.md  05_tech_and_platforms.md  06_parameter_card_style.md  07_macro_controls.md  07_module_selection_panel.md  08_themes.md  09_global_config_panel.md  10_module_parameter_definitions.md
planning docs/amplifier/: 01_amplifier_module.md
planning docs/effects/: 01_effects_base.md
planning docs/filters/: 01_analog_ladder.md  02_analog_highpass.md  03_digital_state_variable.md  04_comb_and_physical.md  05_formant_and_vocal.md  06_specialty_filters.md
planning docs/modulation/: 01_lfo_module.md  02_envelope_module.md  03_performance_controls.md
planning docs/oscillators/: 01_virtual_analog.md  02_wavetable.md  03_phase_distortion.md  04_noise.md  05_oscillator_mutators.md
planning docs/routing_and_mixing/: 01_signal_mixer.md  02_matrix_router.md
planning docs/sequencing/: 01_arpeggiator.md
planning docs/voice/: 01_voice_settings.md
plans/: neon-jr-128-presets-plan.md
